<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deeppatel.mosersuggestionapp.MainActivity">

    <Button
        android:id="@+id/Catering_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:onClick="onClick_Catering"
        android:text="@string/catering"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/TM_button"
        app:layout_constraintTop_toBottomOf="@+id/Moser_Image"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/Events_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_Events"
        android:text="@string/events"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Finance_button"
        app:layout_constraintTop_toBottomOf="@+id/Charity_button" />

    <Button
        android:id="@+id/Finance_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_Finance"
        android:text="@string/finance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HR_button" />

    <Button
        android:id="@+id/Other_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_other"
        android:text="@string/other"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/CEO_button"
        app:layout_constraintTop_toBottomOf="@+id/Events_button" />

    <Button
        android:id="@+id/CEO_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_CEO"
        android:text="@string/ceo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Finance_button" />

    <Button
        android:id="@+id/Charity_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_Charity "
        android:text="@string/charity"
        app:layout_constraintRight_toLeftOf="@+id/HR_button"
        app:layout_constraintTop_toBottomOf="@+id/Catering_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/HR_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_HR"
        android:text="@string/hr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TM_button" />

    <Button
        android:id="@+id/TM_button"
        android:layout_width="161dp"
        android:layout_height="104dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick_TM"
        android:text="@string/team_managers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Moser_Image" />

    <ImageView
        android:id="@+id/Moser_Image"
        android:layout_width="293dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/moserit"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription=""
        tools:ignore="ContentDescription" />
</android.support.constraint.ConstraintLayout>
